--- a/Intro_to_R.tex
+++ b/Intro_to_R.tex
@@ -189,7 +189,7 @@
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, interior hidden, sharp corners, frame hidden, breakable, enhanced, borderline west={3pt}{0pt}{shadecolor}]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[enhanced, borderline west={3pt}{0pt}{shadecolor}, interior hidden, boxrule=0pt, frame hidden, breakable, sharp corners]}{\end{tcolorbox}}\fi
 
 \hypertarget{quarto}{%
 \subsection{Quarto}\label{quarto}}
@@ -231,14 +231,6 @@ Las operaciones de matematicas, logica y de asignacion. \[
 \hat{x} = \frac{\Sigma_{i=1}^{n}{x_i}}{n}
 \]
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{x }\OtherTok{=} \FunctionTok{c}\NormalTok{(}\DecValTok{1}\SpecialCharTok{:}\DecValTok{100}\NormalTok{)}
-\NormalTok{xi }\OtherTok{=} \FunctionTok{sum}\NormalTok{(x)}\SpecialCharTok{/}\FunctionTok{length}\NormalTok{(x)}
-\NormalTok{xi}
-\end{Highlighting}
-\end{Shaded}
-
 \begin{verbatim}
 [1] 50.5
 \end{verbatim}
@@ -271,6 +263,46 @@ se quitan los datos ausentes del cálculo.
 \begin{verbatim}
 [1] NaN
 \end{verbatim}
+
+\#Manipulación de Datos
+
+Para la manipulación se utilizará la librería ``Tidyverse''.
+
+\#\#El ``echo=TRUE'' O ``echo=FALSE'' sirve para que se vea o no se vea
+el código, para que se vea, TRUE es para que salga el código con su
+resultado, y FALSE es para que salga solo el resultado del código en le
+render.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{library}\NormalTok{(tidyverse)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+-- Attaching packages --------------------------------------- tidyverse 1.3.2 --
+v ggplot2 3.4.0      v purrr   0.3.5 
+v tibble  3.1.8      v dplyr   1.0.10
+v tidyr   1.2.1      v stringr 1.4.1 
+v readr   2.1.3      v forcats 0.5.2 
+-- Conflicts ------------------------------------------ tidyverse_conflicts() --
+x dplyr::filter() masks stats::filter()
+x dplyr::lag()    masks stats::lag()
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{plot}\NormalTok{(pressure)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{figure}[H]
+
+{\centering \includegraphics{Intro_to_R_files/figure-pdf/tidy-1.pdf}
+
+}
+
+\end{figure}
 
 
 
